# dilithium-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: dilithium_bench.rs
docs/: MATH.md
examples/: keygen.rs  serialize.rs  sign_verify.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_from_bytes.rs  fuzz_sign_verify.rs  fuzz_unpack_sig.rs
src/: lib.rs  ntt.rs  ntt_avx2.rs  ntt_neon.rs  packing.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  rounding.rs  safe_api.rs  sign.rs  symmetric.rs
tests/: coverage.rs  kat_vectors.rs  multi_vector_kat.rs  round_trip.rs
