[package]
name = "dilithium-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["lattice-safe contributors"]
description = "Pure Rust implementation of ML-DSA (FIPS 204) / CRYSTALS-Dilithium post-quantum digital signature scheme"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lattice-safe/dilithium-rs"
homepage = "https://github.com/lattice-safe/dilithium-rs"
documentation = "https://docs.rs/dilithium-rs"
keywords = ["ml-dsa", "fips-204", "dilithium", "post-quantum", "cryptography"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
zeroize = { version = "1", features = ["alloc"], default-features = false }
getrandom = { version = "0.2", default-features = false }
subtle = { version = "2", default-features = false }

[lib]
name = "dilithium"
path = "src/lib.rs"

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"

[[test]]
name = "kat_vectors"
path = "tests/kat_vectors.rs"

[[test]]
name = "coverage"
path = "tests/coverage.rs"

[dev-dependencies]
rand = "0.8"
sha3 = "0.10"

[profile.release]
opt-level = 3
